
2023-04-26  Simon Sobisch <simonsobisch@gnu.org>

	* general: only include coblocal.h which includes common.h already
	* common.c (cob_continue_after): raise nonfatal exception
	  COB_EC_CONTINUE_LESS_THAN_ZERO for negative waits
	* common.c [TIME_T_IS_NON_ARITHMETIC]: dropped checking for this define as
	  POSIX requires time_t to be an arithmetic type
	* cconv.c (cob_load_collation): minro cleanup
	* fileio.c (EXTFH) [!COB_64_BIT_POINTER]: fix check for opcode OP_CLOSE
	* move.c (store_common_region): speedup by not re-validating data if caller
	  already provides that; adjusted callers to specify that
	* common.c (cob_sys_hosted): prefer memcmp over strncmp with known size

2023-04-18  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c: integrated changes of Chuck Haatveet 2023-03-28 with tuning
	  for even more speed by using best matching types and refactoring
	* common.h: added cob_move_bcd as external function declaration
	* move.c (cob_move): add call to cob_move_bcd for fields without negative
	  scale
	* common.c (cob_is_numeric, cob_is_alpha, cob_is_upper, cob_is_lower,
	  cob_check_numeric, cob_check_numdisp, cob_correct_numeric):
	  prefer pointer arithmetic to arrays
	* common.c (cob_is_numeric, cob_check_numdisp, cob_set_date_from_epoch,
	  set_config_val, translate_boolean_to_int): prefer range check over
	  isdigit and COB_D2I over atoi
	* numeric.c (cob_decimal_get_packed): set by optimized integer routine
	  when possible

2023-04-17  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_decimal_setget_fld, cob_decimal_get_packed,
	  cob_decimal_get_display), common.h: new option COB_STORE_NO_SIZE_ERROR
	  to prevent arithmetic exception being raised during internal MOVE
	* intrinsic.c (cob_intr_lowest_algebraic, cob_intr_highest_algebraic):
	  refactored code for COMP-5
	* move.c (cob_move_display_to_packed), numeric.c (cob_decimal_get_packed):
	  minor adjustment to use optimal code for internal DISPLAY to PACKED,